Added french, spanish, portuguese and such.

--- a/data/particles.yml
+++ b/data/particles.yml
@@ -10,5 +10,15 @@ particles:
     - 'dem'
   english:
     - 'of'
+    - 'de'
+  french:
+    - 'de'
+  spanish:
+    - 'de'
+    - 'da'
+  portuguese:
+    - 'de'
+    - 'da'
+    - 'du'
 
 
