--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: ruby
 rvm:
+  - jruby
   - 2.2.4
-before_install: gem install bundler -v 1.11.2
+  - 2.2.1
+  - 1.9.3
+  - 2.3.0
+before_install: gem install bundler flay flog rubocop
+install:
+  - bundle install --retry=3
+script:
+  - bundle exec rake test
+  - bundle exec rubocop
+  - bundle exec flay
