--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install: gem install bundler flay flog rubocop
 install:
   - bundle install --retry=3
 script:
+  - bundle exec rake source_encoding
   - bundle exec rake test
   - bundle exec rubocop
   - bundle exec flay
