Removed 'da' for Spanish, added 'del'. Added test case

--- a/data/nobility_particles.yml
+++ b/data/nobility_particles.yml
@@ -22,7 +22,7 @@ nobility_particles:
     - 'la'
   spanish:
     - 'de'
-    - 'da'
+    - 'del'
   portuguese:
     - 'de'
     - 'da'
@@ -31,5 +31,4 @@ nobility_particles:
     - 'van'
     - 'de'
     - 'ter'
-
 
