--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,6 @@ workflows:
   all-tests:
     jobs:
       - build:
-          matix:
+          matrix:
             parameters:
               ruby-version: ["2.6.0", "2.7.0", "3.1.2", "jruby"]
