--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,4 @@ workflows:
       - build:
           matrix:
             parameters:
-              ruby-version: ["2.6.0", "2.7.0", "3.1.2", "jruby"]
+              ruby-version: ["2.6.0", "2.7.0", "3.1.2", "jruby-9.3.4.0"]
